--- a/index.html
+++ b/index.html
@@ -871,16 +871,11 @@
       outline: none;
     }
     .thankyou-btn:hover {
-      border-radius: 8px;
-      background: #FFF;
-      box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.06),
-        0px 1px 1px 0px rgba(0, 0, 0, 0.20),
-        0px 1px 0px 0px #FFF inset,
-        0px -1px 1px 0px rgba(255, 255, 255, 0.20) inset,
-        0px 1px 4px 1px rgba(255, 255, 255, 0.20) inset,
-        0px 20px 20px 0px rgba(0, 0, 0, 0.02) inset;
+      border-radius: 16px;
+      background: #f3f3f3;
+      box-shadow: 0 1px 2px 0 rgba(30,34,44,0.08);
       color: #18181A;
-      transform: translateY(-2px) scale(1.03);
+      transform: translateY(2px) scale(0.98);
     }
     .thankyou-btn:active {
       background: #ececec;
